# llamatel-crisis-lifeline-pipeline

./: .gitignore  LICENSE  README.md  bot.py  pyproject.toml  requirements.txt
assets/: .gitkeep
config/: settings.py
dashboard/: app.py  requirements.txt
ingestion/: extractor.py  scraper.py  uploader.py
kestra/: docker-compose.yml
kestra/flows/: 06_gcp_kv.yml  09_gcp_taxi_scheduled.yml
orchestration/deployments/: deployment.py
orchestration/flows/: main_flow.py
orchestration/tasks/: dbt_task.py  extract_task.py  load_task.py  scrape_task.py  upload_task.py
terraform/: main.tf  variables.tf
transform/: dbt_project.yml
transform/models/marts/: dashboard_calls.sql
transform/models/staging/: sources.yml  stg_calls.sql
transform/seeds/: lookup_table.csv  problematica_problema.csv  schema.yml
warehouse/: loader.py
